--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "stream-chat": "^8.10.1",
+    "stream-chat-react": "^10.8.9",
     "tailwindcss": "3.3.3",
     "universal-cookie": "^5.0.0"
   }
